--- a/.gitattributes
+++ b/.gitattributes
@@ -15,3 +15,4 @@
 *.json filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
+*.vm filter=lfs diff=lfs merge=lfs -text
