--- a/.gitattributes
+++ b/.gitattributes
@@ -17,3 +17,4 @@
 *.zip filter=lfs diff=lfs merge=lfs -text
 *.vm filter=lfs diff=lfs merge=lfs -text
 *.ini filter=lfs diff=lfs merge=lfs -text
+*.txt filter=lfs diff=lfs merge=lfs -text
